# VoxelGame

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_debian.sh
app/: CMakeLists.txt
app/include/: Block.h  Chunk.h  Config.h  ControlLayer.h  DebugLayer.h  Entity.h  GameLayer.h  MenuLayer.h  Metrics.h  Physics.h  Rendering.h  RingBuffer.h
app/resources/: example.config  world.db
app/resources/shaders/: BlockFrag.glsl
app/src/: Block.cpp  Chunk.cpp  Config.cpp  ControlLayer.cpp  DebugLayer.cpp  Entity.cpp  GameLayer.cpp  MenuLayer.cpp  Metrics.cpp  Physics.cpp  Rendering.cpp  main.cpp
app/tests/: main.cpp
core/: CMakeLists.txt
core/include/: Application.h  Camera.h  Event.h  Layer.h  Shader.h  Texture.h  ThreadPool.h  VertexArray.h  Window.h
core/libs/glad/: glad.c
core/libs/glm/detail/: glm.cpp
core/src/: Application.cpp  Camera.cpp  Shader.cpp  ThreadPool.cpp  VertexArray.cpp  Window.cpp
include/: App.h  Block.h  Blockdata.h  Buffer.h  Camera.cpp  Camera.h  Chunk.h  Config.h  GameWorld.h  Log.h  Mesh.h  Metrics.h  Model.h  Noise.h  OpenGLHelper.h  Physics.h  Player.h  Profiling.h  Raycast.h  Renderer.h  Rendering.h  Shader.h  Texture.h  ThreadPool.h  VertexArray.h  Window.h  WorldGeneration.h  pch.h
libs/glad/: glad.h
resources/: example.config
resources/shaders/: BasicFrag.glsl  BasicVert.glsl  BlockFrag.glsl  BlockVert.glsl
resources/textures/: TextureAtlas.png~
shader/: BasicFrag.glsl  BasicVert.glsl  BlockFrag.glsl  BlockGeo.glsl  BlockVert.glsl  ChunkVert.glsl  DebugFrag.glsl  DebugVert.glsl  DefaultVert.glsl  InstanceVertShader.glsl  TestGeo.glsl
src/: App.cpp  Block.cpp  Buffer.cpp  Camera.cpp  Chunk.cpp  Config.cpp  GameWorld.cpp  Log.cpp  Mesh.cpp  Metrics.cpp  Model.cpp  Noise.cpp  Physics.cpp  Profiling.cpp  Raycast.cpp  Renderer.cpp  Rendering.cpp  Run.cpp  Shader.cpp  Texture.cpp  ThreadPool.cpp  VertexArray.cpp  Window.cpp  WorldGeneration.cpp  main.cpp
tests/: main.cpp
